--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,48 +3,11 @@
 export(aldg)
 export(bidep)
 export(cormatpair)
-export(discr.sims.cross)
-export(discr.sims.exp)
-export(discr.sims.fat_tails)
-export(discr.sims.linear)
-export(discr.sims.radial)
-export(kerdens)
+export(getDiffMatrix)
 export(ldgsingle)
 export(localMaxima)
 export(matdep)
-export(mgc.sims.2ball)
-export(mgc.sims.2sphere)
-export(mgc.sims.cubic)
-export(mgc.sims.exp)
-export(mgc.sims.joint)
-export(mgc.sims.linear)
-export(mgc.sims.quad)
-export(mgc.sims.spiral)
-export(mgc.sims.step)
-export(mgc.sims.ubern)
-export(mgc.sims.wshape)
 export(mise)
-export(mixcopula)
-export(mixesco)
-export(mixesco_examples)
-export(mixkernel)
-export(mixlowrankmv)
-export(mixlowranksc)
-export(mixtree)
-export(onecopula)
-export(othn)
-export(plot2dsingle)
-export(plot_cormat)
-export(plot_cormatsingle)
 export(randcop)
 export(randcor)
-export(randcov)
 export(rnorm_truc)
-export(samp_kerdens)
-export(simubi)
-import(abind)
-importFrom(MASS,ginv)
-importFrom(MASS,mvrnorm)
-importFrom(stats,rbinom)
-importFrom(stats,rnorm)
-importFrom(stats,runif)
