--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,3 +11,10 @@ export(mise)
 export(randcop)
 export(randcor)
 export(rnorm_truc)
+export(simubi)
+import(abind)
+importFrom(MASS,ginv)
+importFrom(MASS,mvrnorm)
+importFrom(stats,rbinom)
+importFrom(stats,rnorm)
+importFrom(stats,runif)
