--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,7 +12,13 @@ export(randcop)
 export(randcor)
 export(rnorm_truc)
 export(simubi)
+import(HHG)
+import(Hmisc)
+import(TauStar)
 import(abind)
+import(dHSIC)
+import(energy)
+import(minerva)
 importFrom(MASS,ginv)
 importFrom(MASS,mvrnorm)
 importFrom(stats,rbinom)
